# pwrake

./: README  index.html
demo/: Montage_v3.3.patch  Rakefile  affinity.rake  clean.rake  common.rake  montage_tools.rb  partition.rake  pwrake
demo/hierarchy/: Rakefile
demo/montage/: README  Rakefile  montage_tools.rb  pwrake  pwrakedemo.htm  shrunken.hdr
demo/montage-servlet/: README  Rakefile  control.html  images.erb  images.html  index.html  pwrake  pwrakedemo.css  pwrakedemo.js  pwrakedemo.rb  servlet.rb  svg.xhtml
demo/se-tile/: README  Rakefile  default.param  default.sex  graph.dot  montage_tools.rb
demo/spcam/: README  Rakefile  psfmatch.rb  sdfred.rb
demo/spcam/sdfred20100528/: Makefile.in  README  configure  configure.in  install.csh
demo/spcam/sdfred20100528/clscripts/: Makefile.in
demo/spcam/sdfred20100528/clscripts/SPCAMim2FOCASim/: SPCAMim2FOCASim.csh.in  geomatch_focas1_spcam1.db  geomatch_focas1_spcam1.pos
demo/spcam/sdfred20100528/clscripts/geomatch/: geomatch.cl.in  geomatch.param  geomatch.sex.in
demo/spcam/sdfred20100528/clscripts/limitmag/: limitmag.cl.in  limitmag.sex.in
demo/spcam/sdfred20100528/mosaic/: 00README.neko  00README.neko.en  01README  INSTALL.en  INSTALL.ja  Makefile.in  configure  configure.in
demo/spcam/sdfred20100528/mosaic/airmass/: Makefile.in  airmass.pl.in  airmass2.c  airmass2.pl.in  distcorr5.c  distcorr5.sh  grav2.c  grav2.pl.in  noairmass.pl.in  rotate.pl.in
demo/spcam/sdfred20100528/mosaic/getarg/: Makefile.in  getargs.c  getargs.h
demo/spcam/sdfred20100528/mosaic/imc/: Makefile.in  imc.c  imc.h  imc_WCS.c  imc_WCS.c.080610  imc_fits.c  imc_head.h  imc_mos_large.c  imcio2a.c  postage.c  postage.h
demo/spcam/sdfred20100528/mosaic/libsrc/: Makefile.in  lsf.c  lsf.h  oyamin.h  oyamin2b.c  paint_sub.c  paint_sub.h  solve.c  solve.h  sort.h  sortd.h  stat.h  statd.h  sub_sort.c  sub_sortd.c  sub_stat.c  sub_statd.c
demo/spcam/sdfred20100528/mosaic/match/: Makefile.in  estmatch.c  iscross.c  iscross.h  match_single5a.c  match_stack5b.c  match_sub.h  match_sub2.c  overlap2.c  shotmatch5.sh  shotmatch7.sh.in  shotmatch7a.sh.in
demo/spcam/sdfred20100528/mosaic/osmed/: Makefile.in  osmed4.c
demo/spcam/sdfred20100528/mosaic/skysb/: Makefile.in  skydet3b.c  skysb3b.c  skysb_sub.c  skysb_sub.h
demo/spcam/sdfred20100528/mosaic/smth/: Makefile.in  convolve.c  dsmth.c  smth2_quick.c  smth2a.c
demo/spcam/sdfred20100528/mosaic/starsel/: Makefile.in  apphot.h  apphot_sub.c  detect_sub3.c  detect_sub3.h  imopr.c  imopr.h  moment2d.c  moment2d.h  obj3.h  starsel2.c  starsel3.c
demo/spcam/sdfred20100528/mosaic/tool/: Makefile.in  mosrotate.sh.in  stamp.in
demo/spcam/sdfred20100528/mosaic/util/: Makefile.in  arithimg.c  getkey.c  iso2.c  medianimg2.c  normmed.c  total.c  uppercut.c
demo/spcam/sdfred20100528/sdfred/: Makefile.in  blank2.c  blankmap  circular_blanks.c  configure  configure.in  line_blank.c  mask_for_AGX.c  mcomb2.c.1.2  mcomb2.c.org  mkhist.c  randomXY_mask.c  wmediandiv2.c
demo/spcam/sdfred20100528/sdfredSH/: Makefile.in
demo/spcam/sdfred20100528/sdfredSH/blank/: blank.csh.in
demo/spcam/sdfred20100528/sdfredSH/distcorr/: distcorr.csh.in
demo/spcam/sdfred20100528/sdfredSH/ffield/: ffield.csh.in
demo/spcam/sdfred20100528/sdfredSH/fwhmpsf/: fwhmpsf.csh.in  fwhmpsf.param  fwhmpsf.sex.in
demo/spcam/sdfred20100528/sdfredSH/fwhmpsf_batch/: fwhmpsf_batch.csh.in
demo/spcam/sdfred20100528/sdfredSH/limitmag/: limitmag.csh.in  limitmag.param  limitmag.sex.in
demo/spcam/sdfred20100528/sdfredSH/makemos/: about_dir  makemos.csh.in  meanchip_2001Apr_V.lis  meanchip_2001Apr_V.lis_org
demo/spcam/sdfred20100528/sdfredSH/mask_AGX/: mask_AGX.csh.in
demo/spcam/sdfred20100528/sdfredSH/mask_mkflat_HA/: mask_mkflat_HA.csh.in  mask_mkflat_HA.csh.in_old  mask_mkflat_HA.sex.in
demo/spcam/sdfred20100528/sdfredSH/mask_mkflat_HA/bak/blankmap_messiaIV/: blankmap_spcamred_mflat_si002s  blankmap_spcamred_mflat_si006s  blankmap_spcamred_mflat_w67c1  blankmap_spcamred_mflat_w93c2
demo/spcam/sdfred20100528/sdfredSH/mask_mkflat_HA/bak/blankmap_messiaV/: blank_mkflat.lis
demo/spcam/sdfred20100528/sdfredSH/mask_mkflat_HA/bak/blankmap_messiaV_y/: blankmap_spcamred_mflat_si001s  blankmap_spcamred_mflat_si002s  blankmap_spcamred_mflat_si005s  blankmap_spcamred_mflat_si006s  blankmap_spcamred_mflat_w4c5  blankmap_spcamred_mflat_w67c1  blankmap_spcamred_mflat_w6c1  blankmap_spcamred_mflat_w7c3  blankmap_spcamred_mflat_w93c2  blankmap_spcamred_mflat_w9c2
demo/spcam/sdfred20100528/sdfredSH/mask_mkflat_HA/blankmap/: blankmap_spcamred_mflat_si001s  blankmap_spcamred_mflat_w67c1
demo/spcam/sdfred20100528/sdfredSH/mask_mkflat_HA/blankmap_messiaIII/: blankmap_spcamred_mflat_si001s  blankmap_spcamred_mflat_si005s  blankmap_spcamred_mflat_w6c1  blankmap_spcamred_mflat_w9c2
demo/spcam/sdfred20100528/sdfredSH/namechange/: namechange.csh.in
demo/spcam/sdfred20100528/sdfredSH/overscansub/: overscansub.awk.in  overscansub.csh.in  overscansub_beforeApril2001.awk
demo/spcam/sdfred20100528/sdfredSH/psfmatch/: psfmatch.csh.in  psfmatch.sex.in
demo/spcam/sdfred20100528/sdfredSH/psfmatch_batch/: psfmatch_batch.csh.in
demo/spcam/sdfred20100528/sdfredSH/scripts/: biassub.csh_old  distcorr.csh_old  examdark.csh_old  ffield.csh_old  getkey2.pl  getkey2.pl_old  makemos.csh_old  mkbias.csh_old  mkflat.csh_old  namechange2.csh_old  psfmeasure.csh_old  skysb.csh_old  smooth.csh_old
demo/spcam/sdfred20100528/sdfredSH/skysb/: skysb.csh.in  skysb.sex.in
demo/spcam/sdfred20100528/sdfredSH/skysb_reg/: skysb_reg.csh.in  skysb_reg.sex.in
demo/spcam/sdfred20100528/sdfredSH/spcamred/: spcamred.csh.in  spcamred.csh.in_org
demo/spcam/sdfred20100528/sdfredSH/starselect/: starselect.csh.in  starselect.sex.in
handson/ex1/: README  Rakefile  nodes  regist.rb
handson/ex2/: README  libtool
handson/ex3/: Rakefile  montage_tools.rb  nodes
lib/pwrake/: affinity.rb  affinityqueue.rb  algorithm.rb  channel.rb  connection.rb  counter.rb  gfarmchannel.rb  gfarmssh.rb  graph.rb  load.rb  log.rb  logger.rb  manager.rb  pwmultitask.rb  ssh.rb  (+6 more)
(+34 files in other folders)
